# daemonize

./: CMakeLists.txt  Makefile  README.md  SConstruct  concat.c  daemonize.h  go_to_location.snippet.c  lib.c  main.c
daemondb/: db.c
